--- a/docs/assets/css/responsive.css
+++ b/docs/assets/css/responsive.css
@@ -649,9 +649,9 @@
 		line-height: 30px;
 		font-size: 22px;
 	}
-	.top-title.car-top-title{
+	/* .top-title.car-top-title{
 		display: none;
-	}
+	} */
 	.float-sm {
     display: none;
 	}
