--- a/src/assets/css/shortcodes.css
+++ b/src/assets/css/shortcodes.css
@@ -2480,7 +2480,7 @@ form .checkbox.ver-1 a i {
 	cursor: pointer;
 	font-family: 'Roboto Condensed';
 	font-weight: bold;
-	color: #666666;
+	color: white;
 	margin-right: 30px;
 	font-size: 14px;
 	-webkit-transition:all 0.3s ease-in-out;
