--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -129,7 +129,7 @@
                     <div class="widget-subscribe">
                         <h4>SUBSCRIBE <span>US</span></h4>
                         <div class="form-subscribe">
-                            <form action="#" method="post" accept-charset="utf-8">
+                            <form [formGroup]="myForm"method="post" accept-charset="utf-8">
                                 <p>Find out latest news and discounts:</p>
                                 <div class="input-subscribe">
                                     <input type="text" name="email-contact" placeholder="E_mail">
